# WFC

./: .gitignore  CMakeLists.txt  cell.cpp  cell.h  configs.json  grid.cpp  grid.h  image_generator.cpp  image_generator.h  main.cpp  pattern.h  readme.md  sides.cpp  sides.h  tile.cpp  tile.h  tileinfo.cpp  tileinfo.h  tileset.cpp  tileset.h  tilesetconfig.cpp  tilesetconfig.h  wfc_generator.cpp  wfc_generator.h
GUI/: mainwindow.cpp  mainwindow.h
GenerationConfig/GrassField/: config.json
Samples/GrassField/: config.json
Samples/Waves/: config.json
SimpleTiles/: config.json
Tiles/: config.json
Tiles/BlobTiles/: config.json
Tiles/SimpleTiles/: config.json
Tiles/circuit/: config.json
Tiles/polka/: config.json
Tiles/roads/: config.json
